--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,68 @@
-.navbar{
+ .navbar{
+   
     position: fixed;
     overflow: hidden;
     width: 100%;
     z-index: 1;
+    text-shadow: -1px -1px 1.2px rgba(63, 59, 59, 0.5),
+    1px 1px 1px rgb(1 1 1 / 7%);
+    box-shadow:
+    inset 3px 5px 5px -1px rgba(228, 228, 228, 0.5), 
+    inset -3px -3px 5px -1px rgb(0 0 0 / 20%),
+     1px 1px 1px 2px rgba(234, 228, 228, 0.8),
+    2.5px 5px 5px 1px rgb(0 0 0 / 90%) 
+  
 }
 .navbar-nav{
     margin-top: auto;
 }
 nav a{
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: bolder;
     letter-spacing: 1px;
 }
-.jumbotron{
-    background-image: url(/img/fondo1.jpg);
-  background-size: cover;
-  height: 80vh;
+
+   
   
-  
-}
+
 .title{
-    color: coral;
+    font-size: 10px;
+    color: rgb(233, 100, 52);
+    text-shadow: -1px -2px 1.2px rgba(63, 59, 59, 0.5),
+    2px 3px 2px rgb(1 1 1 / 7%);
 
-    text-shadow: 5px solid black;
+   
+} 
+
+
+.parallax {
+    /* The image used */
+    background-image: url(/img/fondo1.jpg);
+  height: 80vh;
+    /* Set a specific height */
+    min-height: 360px; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow:
+    inset 3px 5px 5px 1px rgba(1, 17, 11, 0.5), 
+    inset 3px 3px 5px 1px rgba(22, 170, 61, 0.2),
+     1px 1px 1px 2px rgba(74, 101, 62, 0.8),
+    2.5px 5px 5px 1px rgb(0 0 0 / 90%) 
+  
+  }
+
+.text-center{
+    text-transform: uppercase;
+    font-weight: bold;
+    text-shadow: -1px -1px 1.2px rgba(63, 59, 59, 0.5),
+    1px 1px 1px rgba(152, 148, 148, 0.07);
+  
 }
-
-
-
-
 
 
 
