--- a/css/reservas.css
+++ b/css/reservas.css
@@ -1,10 +1,14 @@
 body{
-    background-image: url(../img/fondo5.jpg);
+    background-image:  url(../img/fondo5.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
-}
+   
+   
+    
+ 
+} 
 
-/* reservation */
+/* reservas formulario */
 #reservation .form-control {
     border-radius: 0;
     border-radius: 20px;
@@ -14,9 +18,11 @@ body{
      1px 1px 1px 2px rgba(234, 228, 228, 0.8),
     2.5px 5px 5px 1px rgb(0 0 0 / 90%) 
 }
+/* parafo previo formulario */
 .instrucciones{
-    color: coral;
-    font-weight: bold;
+    color: rgb(243, 237, 231);
+    font-weight: bolder;
+
 }
 
 #reservation .form-control:focus {
