--- a/css/menu.css
+++ b/css/menu.css
@@ -4,7 +4,7 @@ body {
     font-family: "Spline Sans", sans-serif;
     color: #777;
     line-height: 1.7;
-    background-image: url(./img/fondo1.jpg);
+    background-image: url(../img/fondo1.jpg);
 }
 .nav{
     
