--- a/css/menu.css
+++ b/css/menu.css
@@ -6,6 +6,7 @@ body {
     line-height: 1.7;
     
 }
+/* nav-bar */
 .nav{
     
     color: #222;
@@ -19,7 +20,7 @@ body {
     
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,h5 {
     font-weight: 600;
     color: #222;
 }
@@ -29,7 +30,7 @@ a {
     text-decoration: none;
     transition: all 0.4s;
 }
-
+/* efecto hover span */
 a:hover {
     color: #F58d17;
 }
@@ -42,7 +43,7 @@ section {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-
+/* efecto hover los cards */
 .shadow-on-hover {
     transition: all 0.3s;
 }
