--- a/css/reservas.css
+++ b/css/reservas.css
@@ -10,7 +10,12 @@ body{
 
 /* reservas formulario */
 #reservation .form-control {
-    border-radius: 0;
+    box-shadow:
+    inset 3px 5px 5px -1px rgba(228, 228, 228, 0.5), 
+    inset -3px -3px 5px -1px rgb(0 0 0 / 20%),
+     1px 1px 1px 2px rgba(234, 228, 228, 0.8),
+    2.5px 5px 5px 1px rgb(0 0 0 / 90%) ;
+  
     border-radius: 20px;
     
 }
@@ -36,7 +41,7 @@ body{
 footer {
     background: linear-gradient(rgba(54, 56, 54, 0.5), rgba(0, 0, 0, 0.7));
     padding-top: 20px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
    
     
     
@@ -57,7 +62,7 @@ footer a{
 
 
 .footer-bottom {
-    padding-top: 30px;
+    padding-top: 10px;
     border-top: 1px solid rgba(14, 13, 13, 0.4);
 }
 .mapa{
